[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Chicken (Player)/Left/ChickenLeft1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Chicken (Player)/Left/ChickenLeft2.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Chicken (Player)/Left/ChickenLeft3.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Chicken (Player)/Left/ChickenLeft4.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Chicken (Player)/Up/ChickenUp1.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Chicken (Player)/Up/ChickenUp2.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Chicken (Player)/Up/ChickenUp3.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Chicken (Player)/Up/ChickenUp4.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Chicken (Player)/Down/ChickenDown1.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Chicken (Player)/Down/ChickenDown2.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Chicken (Player)/Down/ChickenDown3.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Chicken (Player)/Down/ChickenDown4.png" type="Texture" id=13]
[ext_resource path="res://Sounds/crunch.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/horse_whinny.wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/happy_deer.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "runningLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "runningUp",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "runningDown",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "runningDown"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.00348, 1.01256 )
shape = SubResource( 2 )

[node name="right" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )

[node name="down" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )

[node name="left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -10, 0 )

[node name="up" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -10 )

[node name="Crunch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="HappyDear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="HorseWinny" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
